# localscribe

./: .gitignore  CLAUDE.md  LICENSE  README.md  Start Transcriber.bat  Start Transcriber.command  TROUBLESHOOTING.md  pyproject.toml
app/: awake.py  diagnostics.py  discovery.py  engine.py  folder_picker.py  gpu.py  main.py  state.py  ui.py  worker.py  writers.py
docs/: TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-07-11-localscribe.md
docs/superpowers/specs/: 2026-07-11-localscribe-design.md
example_video/: ATTRIBUTION.txt
tests/: test_awake.py  test_diagnostics.py  test_discovery.py  test_engine.py  test_folder_picker.py  test_gpu.py  test_integration.py  test_main.py  test_state.py  test_ui.py  test_worker.py  test_writers.py
