[project]
name = "localscribe"
version = "1.0.0"
description = "Double-click local batch transcription for researchers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper==1.2.1",
    "nicegui>=3.14,<4",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: integration tests that download real models"]
