[project]
name = "localscribe"
version = "1.0.0"
description = "Double-click local batch transcription for researchers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper==1.2.1",
    "nicegui>=3.14,<4",
    # onnxruntime>=1.24 dropped macosx_x86_64 (Intel Mac) wheels, so a plain
    # faster-whisper transitive resolve would fail `uv sync` on Intel Macs.
    # Fork the lock: Intel Macs get the newest version that still ships an
    # x86_64 wheel (1.23.2); every other platform keeps the latest (1.27.0).
    "onnxruntime==1.23.2; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "onnxruntime==1.27.0; platform_system != 'Darwin' or platform_machine != 'x86_64'",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: integration tests that download real models"]
